yaml/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 603229842386.dkr.ecr.ap-northeast-1.amazonaws.com/back
        ports:
        - containerPort: 5000
      serviceAccountName: pod-bedrock
