yaml/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 603229842386.dkr.ecr.ap-northeast-1.amazonaws.com/front
        ports:
        - containerPort: 8501
